checked: code in the validator

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <title>Тест</title>
   <meta name="description" content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse corporis voluptatem provident beatae fuga commodi voluptate accusantium quasi fugit officia alias culpa excepturi assumenda cumque omnis sed, harum odit praesentium.
 ">
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
-  <script src="scripts/main.js" type="module" defer></script>
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -76,6 +73,8 @@
       </div>
     </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="scripts/main.js" type="module"></script>
 </body>
 
 </html>
