--- a/form.html
+++ b/form.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tecт-форма</title>
-    <script src="scripts/form.js" type="module" defer></script>
 </head>
 
 <body>
@@ -60,6 +59,7 @@
         </fieldset>
         <button type="submit">Отправить</button>
     </form>
+    <script src="scripts/form.js" type="module"></script>
 </body>
 
 </html>
