--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
   <script src="scripts/main.js" type="module"></script>
 </body>
 
